--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ title: Home
       <div class="row">
         <div class="span8">
           <p>
-          The fastest way to grow your business with the leader in <em>Technology.</em>
+          The fastest way to grow your business with the expert in <em>Technology.</em>
           <span>Check out our options and features included.</span>
           </p>
         </div>
@@ -168,7 +168,7 @@ title: Home
 
     <div class="row center">
       <div class="span12">
-        <h2 class="short">Admedly is <strong class="inverted">incredibly</strong> beautiful and fully responsive.</h2>
+        <h2 class="short">Admedly is a boutique<strong class="inverted">technology</strong> consulting company.</h2>
         <p class="featured lead">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum, nulla vel pellentesque consequat, ante nulla hendrerit arcu, ac tincidunt mauris lacus sed leo. vamus suscipit molestie vestibulum.
         </p>
@@ -186,19 +186,19 @@ title: Home
         <div class="span2 offset1">
           <div class="process-image" data-appear-animation="bounceIn">
             <img src="img/home-concept-item-1.png" alt="" />
-            <strong>Strategy</strong>
+            <strong>Design</strong>
           </div>
         </div>
         <div class="span2">
           <div class="process-image" data-appear-animation="bounceIn" data-appear-animation-delay="200">
             <img src="img/home-concept-item-2.png" alt="" />
-            <strong>Planning</strong>
+            <strong>Build</strong>
           </div>
         </div>
         <div class="span2">
           <div class="process-image" data-appear-animation="bounceIn" data-appear-animation-delay="400">
             <img src="img/home-concept-item-3.png" alt="" />
-            <strong>Build</strong>
+            <strong>Scale</strong>
           </div>
         </div>
         <div class="span4 offset1">
@@ -224,7 +224,7 @@ title: Home
 
     <div class="row">
       <div class="span8">
-        <h2>Our <strong>Features</strong></h2>
+        <h2>We <strong>specialize</strong> in </h2>
         <div class="row">
           <div class="span4">
             <div class="feature-box">
@@ -232,7 +232,7 @@ title: Home
                 <i class="icon-group"></i>
               </div>
               <div class="feature-box-info">
-                <h4 class="shorter">Customer Support</h4>
+                <h4 class="shorter">Online Advertising</h4>
                 <p class="tall">Lorem ipsum dolor sit amet, consectetur adip.</p>
               </div>
             </div>
@@ -241,7 +241,7 @@ title: Home
                 <i class="icon-file"></i>
               </div>
               <div class="feature-box-info">
-                <h4 class="shorter">HTML5 / CSS3 / JS</h4>
+                <h4 class="shorter">E-Commerce</h4>
                 <p class="tall">Lorem ipsum dolor sit amet, adip.</p>
               </div>
             </div>
@@ -270,7 +270,7 @@ title: Home
                 <i class="icon-film"></i>
               </div>
               <div class="feature-box-info">
-                <h4 class="shorter">Sliders</h4>
+                <h4 class="shorter">Page Speed</h4>
                 <p class="tall">Lorem ipsum dolor sit amet, consectetur.</p>
               </div>
             </div>
@@ -279,7 +279,7 @@ title: Home
                 <i class="image-icon small user"></i>
               </div>
               <div class="feature-box-info">
-                <h4 class="shorter">Icons</h4>
+                <h4 class="shorter">Cloud Hosting</h4>
                 <p class="tall">Lorem ipsum dolor sit amet, consectetur adip.</p>
               </div>
             </div>
